--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.8.1</version>
+					<configuration>
+						<compilerArgs>--enable-preview</compilerArgs>
+					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
@@ -39,6 +42,9 @@
 							<version>8.0.1</version>
 						</dependency>
 					</dependencies>
+					<configuration>
+						<argLine>--enable-preview</argLine>
+					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-jar-plugin</artifactId>
